Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: Specifier ExDecList SEMI
    3           | Specifier SEMI
    4           | Specifier FunDec CompSt

    5 ExDecList: VarDec
    6          | VarDec COMMA ExDecList

    7 Specifier: TYPE
    8          | StructSpecifier

    9 StructSpecifier: STRUCT OptTag LC DefList RC
   10                | STRUCT Tag

   11 OptTag: %empty
   12       | ID

   13 Tag: ID

   14 VarDec: ID
   15       | VarDec LB INT RB

   16 FunDec: ID LP VarList RP
   17       | ID LP RP

   18 VarList: ParamDec COMMA VarList
   19        | ParamDec

   20 ParamDec: Specifier VarDec

   21 CompSt: LC DefList StmtList RC

   22 StmtList: %empty
   23         | Stmt StmtList

   24 Stmt: Exp SEMI
   25     | CompSt
   26     | RETURN Exp SEMI
   27     | IF LP Exp RP Stmt
   28     | IF LP Exp RP Stmt ELSE Stmt
   29     | WHILE LP Exp RP Stmt

   30 DefList: %empty
   31        | Def DefList

   32 Def: Specifier DecList SEMI

   33 DecList: Dec
   34        | Dec COMMA DecList

   35 Dec: VarDec
   36    | VarDec ASSIGNOP Exp

   37 Exp: Exp ASSIGNOP Exp
   38    | Exp AND Exp
   39    | Exp OR Exp
   40    | Exp RELOP Exp
   41    | Exp PLUS Exp
   42    | Exp MINUS Exp
   43    | Exp STAR Exp
   44    | Exp DIV Exp
   45    | LP Exp RP
   46    | MINUS Exp
   47    | NOT Exp
   48    | ID LP Args RP
   49    | ID LP RP
   50    | Exp LB Exp RB
   51    | Exp DOT ID
   52    | ID
   53    | INT
   54    | FLOAT

   55 Args: Exp COMMA Args
   56     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SEMI (258) 2 3 24 26 32
    COMMA (259) 6 18 34 55
    ASSIGNOP (260) 36 37
    RELOP <ttype> (261) 40
    PLUS (262) 41
    MINUS (263) 42 46
    STAR (264) 43
    DIV (265) 44
    AND (266) 38
    OR (267) 39
    DOT (268) 51
    NOT (269) 47
    TYPE (270) 7
    LP (271) 16 17 27 28 29 45 48 49
    RP (272) 16 17 27 28 29 45 48 49
    LB (273) 15 50
    RB (274) 15 50
    LC (275) 9 21
    RC (276) 9 21
    STRUCT (277) 9 10
    RETURN (278) 26
    IF (279) 27 28
    ELSE (280) 28
    WHILE (281) 29
    INT <intv> (282) 15 53
    FLOAT <floatv> (283) 54
    ID <name> (284) 12 13 14 16 17 48 49 51 52
    NEG (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3 4
        on right: 1
    ExDecList (35)
        on left: 5 6
        on right: 2 6
    Specifier (36)
        on left: 7 8
        on right: 2 3 4 20 32
    StructSpecifier (37)
        on left: 9 10
        on right: 8
    OptTag (38)
        on left: 11 12
        on right: 9
    Tag (39)
        on left: 13
        on right: 10
    VarDec (40)
        on left: 14 15
        on right: 5 6 15 20 35 36
    FunDec (41)
        on left: 16 17
        on right: 4
    VarList (42)
        on left: 18 19
        on right: 16 18
    ParamDec (43)
        on left: 20
        on right: 18 19
    CompSt (44)
        on left: 21
        on right: 4 25
    StmtList (45)
        on left: 22 23
        on right: 21 23
    Stmt (46)
        on left: 24 25 26 27 28 29
        on right: 23 27 28 29
    DefList (47)
        on left: 30 31
        on right: 9 21 31
    Def (48)
        on left: 32
        on right: 31
    DecList (49)
        on left: 33 34
        on right: 32 34
    Dec (50)
        on left: 35 36
        on right: 33 34
    Exp (51)
        on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 24 26 27 28 29 36 37 38 39 40 41 42 43 44 45 46 47 50 51 55 56
    Args (52)
        on left: 55 56
        on right: 48 55


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Program          go to state 3
    ExtDefList       go to state 4
    Specifier        go to state 5
    StructSpecifier  go to state 6


State 1

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


State 2

    9 StructSpecifier: STRUCT . OptTag LC DefList RC
   10                | STRUCT . Tag

    ID  shift, and go to state 7

    $default  reduce using rule 11 (OptTag)

    OptTag  go to state 8
    Tag     go to state 9


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 10


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: Specifier . ExDecList SEMI
    3           | Specifier . SEMI
    4           | Specifier . FunDec CompSt

    SEMI  shift, and go to state 11
    ID    shift, and go to state 12

    ExDecList  go to state 13
    VarDec     go to state 14
    FunDec     go to state 15


State 6

    8 Specifier: StructSpecifier .

    $default  reduce using rule 8 (Specifier)


State 7

   12 OptTag: ID .
   13 Tag: ID .

    LC        reduce using rule 12 (OptTag)
    $default  reduce using rule 13 (Tag)


State 8

    9 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 16


State 9

   10 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 10 (StructSpecifier)


State 10

    0 $accept: Program $end .

    $default  accept


State 11

    3 ExtDefList: Specifier SEMI .

    $default  reduce using rule 3 (ExtDefList)


State 12

   14 VarDec: ID .
   16 FunDec: ID . LP VarList RP
   17       | ID . LP RP

    LP  shift, and go to state 17

    $default  reduce using rule 14 (VarDec)


State 13

    2 ExtDefList: Specifier ExDecList . SEMI

    SEMI  shift, and go to state 18


State 14

    5 ExDecList: VarDec .
    6          | VarDec . COMMA ExDecList
   15 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 19
    LB     shift, and go to state 20

    $default  reduce using rule 5 (ExDecList)


State 15

    4 ExtDefList: Specifier FunDec . CompSt

    LC  shift, and go to state 21

    CompSt  go to state 22


State 16

    9 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 30 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 6
    DefList          go to state 24
    Def              go to state 25


State 17

   16 FunDec: ID LP . VarList RP
   17       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 26
    STRUCT  shift, and go to state 2

    Specifier        go to state 27
    StructSpecifier  go to state 6
    VarList          go to state 28
    ParamDec         go to state 29


State 18

    2 ExtDefList: Specifier ExDecList SEMI .

    $default  reduce using rule 2 (ExtDefList)


State 19

    6 ExDecList: VarDec COMMA . ExDecList

    ID  shift, and go to state 30

    ExDecList  go to state 31
    VarDec     go to state 14


State 20

   15 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 32


State 21

   21 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 30 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 6
    DefList          go to state 33
    Def              go to state 25


State 22

    4 ExtDefList: Specifier FunDec CompSt .

    $default  reduce using rule 4 (ExtDefList)


State 23

   32 Def: Specifier . DecList SEMI

    ID  shift, and go to state 30

    VarDec   go to state 34
    DecList  go to state 35
    Dec      go to state 36


State 24

    9 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 37


State 25

   31 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 30 (DefList)

    Specifier        go to state 23
    StructSpecifier  go to state 6
    DefList          go to state 38
    Def              go to state 25


State 26

   17 FunDec: ID LP RP .

    $default  reduce using rule 17 (FunDec)


State 27

   20 ParamDec: Specifier . VarDec

    ID  shift, and go to state 30

    VarDec  go to state 39


State 28

   16 FunDec: ID LP VarList . RP

    RP  shift, and go to state 40


State 29

   18 VarList: ParamDec . COMMA VarList
   19        | ParamDec .

    COMMA  shift, and go to state 41

    $default  reduce using rule 19 (VarList)


State 30

   14 VarDec: ID .

    $default  reduce using rule 14 (VarDec)


State 31

    6 ExDecList: VarDec COMMA ExDecList .

    $default  reduce using rule 6 (ExDecList)


State 32

   15 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 42


State 33

   21 CompSt: LC DefList . StmtList RC

    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    LP      shift, and go to state 45
    LC      shift, and go to state 21
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    ID      shift, and go to state 51

    $default  reduce using rule 22 (StmtList)

    CompSt    go to state 52
    StmtList  go to state 53
    Stmt      go to state 54
    Exp       go to state 55


State 34

   15 VarDec: VarDec . LB INT RB
   35 Dec: VarDec .
   36    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 56
    LB        shift, and go to state 20

    $default  reduce using rule 35 (Dec)


State 35

   32 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 57


State 36

   33 DecList: Dec .
   34        | Dec . COMMA DecList

    COMMA  shift, and go to state 58

    $default  reduce using rule 33 (DecList)


State 37

    9 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 9 (StructSpecifier)


State 38

   31 DefList: Def DefList .

    $default  reduce using rule 31 (DefList)


State 39

   15 VarDec: VarDec . LB INT RB
   20 ParamDec: Specifier VarDec .

    LB  shift, and go to state 20

    $default  reduce using rule 20 (ParamDec)


State 40

   16 FunDec: ID LP VarList RP .

    $default  reduce using rule 16 (FunDec)


State 41

   18 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 27
    StructSpecifier  go to state 6
    VarList          go to state 59
    ParamDec         go to state 29


State 42

   15 VarDec: VarDec LB INT RB .

    $default  reduce using rule 15 (VarDec)


State 43

   46 Exp: MINUS . Exp

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 60


State 44

   47 Exp: NOT . Exp

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 61


State 45

   45 Exp: LP . Exp RP

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 62


State 46

   26 Stmt: RETURN . Exp SEMI

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 63


State 47

   27 Stmt: IF . LP Exp RP Stmt
   28     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 64


State 48

   29 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 65


State 49

   53 Exp: INT .

    $default  reduce using rule 53 (Exp)


State 50

   54 Exp: FLOAT .

    $default  reduce using rule 54 (Exp)


State 51

   48 Exp: ID . LP Args RP
   49    | ID . LP RP
   52    | ID .

    LP  shift, and go to state 66

    $default  reduce using rule 52 (Exp)


State 52

   25 Stmt: CompSt .

    $default  reduce using rule 25 (Stmt)


State 53

   21 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 67


State 54

   23 StmtList: Stmt . StmtList

    MINUS   shift, and go to state 43
    NOT     shift, and go to state 44
    LP      shift, and go to state 45
    LC      shift, and go to state 21
    RETURN  shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    ID      shift, and go to state 51

    $default  reduce using rule 22 (StmtList)

    CompSt    go to state 52
    StmtList  go to state 68
    Stmt      go to state 54
    Exp       go to state 55


State 55

   24 Stmt: Exp . SEMI
   37 Exp: Exp . ASSIGNOP Exp
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   50    | Exp . LB Exp RB
   51    | Exp . DOT ID

    SEMI      shift, and go to state 69
    ASSIGNOP  shift, and go to state 70
    RELOP     shift, and go to state 71
    PLUS      shift, and go to state 72
    MINUS     shift, and go to state 73
    STAR      shift, and go to state 74
    DIV       shift, and go to state 75
    AND       shift, and go to state 76
    OR        shift, and go to state 77
    DOT       shift, and go to state 78
    LB        shift, and go to state 79


State 56

   36 Dec: VarDec ASSIGNOP . Exp

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 80


State 57

   32 Def: Specifier DecList SEMI .

    $default  reduce using rule 32 (Def)


State 58

   34 DecList: Dec COMMA . DecList

    ID  shift, and go to state 30

    VarDec   go to state 34
    DecList  go to state 81
    Dec      go to state 36


State 59

   18 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 18 (VarList)


State 60

   37 Exp: Exp . ASSIGNOP Exp
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   46    | MINUS Exp .
   50    | Exp . LB Exp RB
   51    | Exp . DOT ID

    DOT  shift, and go to state 78
    LB   shift, and go to state 79

    $default  reduce using rule 46 (Exp)


State 61

   37 Exp: Exp . ASSIGNOP Exp
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   47    | NOT Exp .
   50    | Exp . LB Exp RB
   51    | Exp . DOT ID

    DOT  shift, and go to state 78
    LB   shift, and go to state 79

    $default  reduce using rule 47 (Exp)


State 62

   37 Exp: Exp . ASSIGNOP Exp
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   45    | LP Exp . RP
   50    | Exp . LB Exp RB
   51    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 70
    RELOP     shift, and go to state 71
    PLUS      shift, and go to state 72
    MINUS     shift, and go to state 73
    STAR      shift, and go to state 74
    DIV       shift, and go to state 75
    AND       shift, and go to state 76
    OR        shift, and go to state 77
    DOT       shift, and go to state 78
    RP        shift, and go to state 82
    LB        shift, and go to state 79


State 63

   26 Stmt: RETURN Exp . SEMI
   37 Exp: Exp . ASSIGNOP Exp
   38    | Exp . AND Exp
   39    | Exp . OR Exp
   40    | Exp . RELOP Exp
   41    | Exp . PLUS Exp
   42    | Exp . MINUS Exp
   43    | Exp . STAR Exp
   44    | Exp . DIV Exp
   50    | Exp . LB Exp RB
   51    | Exp . DOT ID

    SEMI      shift, and go to state 83
    ASSIGNOP  shift, and go to state 70
    RELOP     shift, and go to state 71
    PLUS      shift, and go to state 72
    MINUS     shift, and go to state 73
    STAR      shift, and go to state 74
    DIV       shift, and go to state 75
    AND       shift, and go to state 76
    OR        shift, and go to state 77
    DOT       shift, and go to state 78
    LB        shift, and go to state 79


State 64

   27 Stmt: IF LP . Exp RP Stmt
   28     | IF LP . Exp RP Stmt ELSE Stmt

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 84


State 65

   29 Stmt: WHILE LP . Exp RP Stmt

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 85


State 66

   48 Exp: ID LP . Args RP
   49    | ID LP . RP

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    RP     shift, and go to state 86
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp   go to state 87
    Args  go to state 88


State 67

   21 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 21 (CompSt)


State 68

   23 StmtList: Stmt StmtList .

    $default  reduce using rule 23 (StmtList)


State 69

   24 Stmt: Exp SEMI .

    $default  reduce using rule 24 (Stmt)


State 70

   37 Exp: Exp ASSIGNOP . Exp

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 89


State 71

   40 Exp: Exp RELOP . Exp

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 90


State 72

   41 Exp: Exp PLUS . Exp

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 91


State 73

   42 Exp: Exp MINUS . Exp

    MINUS  shift, and go to state 43
    NOT    shift, and go to state 44
    LP     shift, and go to state 45
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51

    Exp  go to state 92


State 74

   43 Exp: Exp STAR . Exp
